log
Wed 20 Sep 2023 11:15:50 PM UTC: 
 tests:  0|4
total_score: 0/70
c214f27
Thu 28 Sep 2023 04:18:24 AM UTC: 
 heap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
7a047a0
Thu 28 Sep 2023 07:29:09 AM UTC: 
 heap.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  2|2
total_score: 20/70
77fb7b1
Thu 28 Sep 2023 07:29:41 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
b107076
Thu 28 Sep 2023 07:30:03 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
a0a1ac5
Thu 28 Sep 2023 07:33:58 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:21:22: error: ‘return’ with no value, in function returning non-void [-Werror=return-type]
   21 |   if (pq->size == 0) return;
      |                      ^~~~~~
heap.c:20:7: note: declared here
   20 | void* heap_top(Heap* pq){
      |       ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
4387e93
Thu 28 Sep 2023 07:34:08 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
35d6244
Thu 28 Sep 2023 07:52:54 AM UTC: 
 heap.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  2|2
total_score: 20/70
8d33349
Thu 28 Sep 2023 07:56:29 AM UTC: 
 heap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:33:10: error: expected expression before ‘<’ token
   33 |   if (pq-<size == pq-<capac){
      |          ^
heap.c:35:73: error: expected ‘;’ before ‘}’ token
   35 |     pq->heapArray = realloc(pq->heapArray, pq->capac * sizeof(heapElem))
      |                                                                         ^
      |                                                                         ;
   36 |   }
      |   ~                                                                      
Compilation failed
506e7b8
Thu 28 Sep 2023 07:56:45 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:33:10: error: expected expression before ‘<’ token
   33 |   if (pq-<size == pq-<capac){
      |          ^
Compilation failed
014d2ee
Thu 28 Sep 2023 07:57:07 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
db3b58f
